--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<mat-toolbar  class="navbar">
+    <div style="color: cornsilk;">To Do List</div>
+    <div id="myDIV">
+        <button class="navButton" mat-raised-button active>Home</button>
+        <button class="navButton" mat-raised-button>Contact</button>
+        <button class="navButton" mat-raised-button>About</button>
+    </div>
+  </mat-toolbar>
